--- a/HTTP/HTTP/fluxohttp.html
+++ b/HTTP/HTTP/fluxohttp.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="fluxohttp.html" target="_self">Fluxo HTTP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="fluxohttp.html" target="_self">APIs HTTP</a>
+                        <a class="nav-link" href="apishttp.html" target="_self">APIs HTTP</a>
                     </li>
                 </ul>
             </div>
